[build-system]
requires = [
  "pybind11>=2.12",
  "scikit-build-core>=0.10",
  "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "proteus-python-backend-cuda12-llvm22"
dynamic = ["version"]
description = "CUDA backend wheel for Proteus Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 WITH LLVM-exception"
authors = [
  { name = "Giorgis Georgakoudis" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "Topic :: Software Development :: Compilers",
]

[project.entry-points."proteus.backends"]
cuda = "proteus_backend_cuda:get_backend"

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"
cmake.source-dir = "../../.."
build-dir = "build/{wheel_tag}"
wheel.install-dir = ""
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
BUILD_SHARED = "ON"
ENABLE_TESTS = "OFF"
PROTEUS_ENABLE_CUDA = "ON"
PROTEUS_ENABLE_HIP = "OFF"
PROTEUS_ENABLE_MLIR = "OFF"
PROTEUS_ENABLE_MPI = "OFF"
PROTEUS_ENABLE_PYTHON = "ON"
PROTEUS_PYTHON_WHEEL = "ON"
PROTEUS_PYTHON_PACKAGE_DIR = "proteus_backend_cuda"
PROTEUS_PYTHON_PACKAGE_SOURCE_DIR = "python/proteus_backend_cuda"

[tool.setuptools_scm]
root = "../../.."
